[SDK] Fix conflicts between "external" RuyiSDKCpp and SDK.Gen.InternalCpp
- Instead of static MessageCreator::Initialize() each API generates own MessageCreatorXXX() function to register message types
- Required headers are also generated
- To avoid ambiguity between internal and external header like "Constants/ConstantsSDKDataTypes_types.h", "ConstantsInternal" is used instead

--- a/RuyiSDKCpp/RuyiSDKCpp.vcxproj.filters
+++ b/RuyiSDKCpp/RuyiSDKCpp.vcxproj.filters
@@ -154,9 +154,6 @@
     <ClCompile Include="PubSub\SubscribeClient.cpp">
       <Filter>PubSub</Filter>
     </ClCompile>
-    <ClCompile Include="Generated\MessageCreator.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
     <ClCompile Include="Generated\Constants\ConstantsSDKDataTypes_constants.cpp">
       <Filter>Generated\Constants</Filter>
     </ClCompile>
@@ -324,6 +321,12 @@
     </ClCompile>
     <ClCompile Include="Generated\GamesDB\GamesDBSDKServices_types.cpp">
       <Filter>Generated\GamesDB</Filter>
+    </ClCompile>
+    <ClCompile Include="MessageCreator.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Generated\MessageCreatorRuyiSDKCpp.cpp">
+      <Filter>Generated</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
