--- a/SDK.Gen.Rust/Cargo.toml
+++ b/SDK.Gen.Rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "subor-rs"
-version = "0.1.0"
+version = "0.9.2"
 authors = ["Jake W <jake@playruyi.com>"]
 repository = "https://github.com/subor/sdk"
 homepage = "http://www.playzplus.com/"
@@ -9,6 +9,6 @@ license = "MIT"
 keywords = ["subor", "zplus", "ruyi"]
 
 [dependencies]
-thrift = "0.0.4"
+thrift = { version = "1.0.0", path = "../../../../thrift/lib/rs" }
 ordered-float = "1.0"
 try_from = "0.2"
