--- a/SDK.Gen.CommonAsync/SDK.Gen.CommonAsync.csproj
+++ b/SDK.Gen.CommonAsync/SDK.Gen.CommonAsync.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\externals\thrift.netcore\Thrift.csproj" />
+    <PackageReference Include="Subor.Thrift" Version="0.11.0" />
   </ItemGroup>
 
 </Project>
