--- a/SDK.Gen.ServiceAsync/SDK.Gen.ServiceAsync.csproj
+++ b/SDK.Gen.ServiceAsync/SDK.Gen.ServiceAsync.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\externals\thrift.netcore\Thrift.csproj" />
+    <PackageReference Include="Subor.Thrift" Version="0.11.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SDK.Gen.CommonAsync\SDK.Gen.CommonAsync.csproj" />
   </ItemGroup>
 
