[SDK] Remove async SDK dependency on MDPCommon so public assemblies part of SDK remain the same

--- a/SDK.BaseAsync/SDK.BaseAsync.csproj
+++ b/SDK.BaseAsync/SDK.BaseAsync.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.2.2" />
+    <PackageReference Include="NetMQ" Version="4.0.0.1" />
   </ItemGroup>
 
   <ItemGroup>
