--- a/SDKCommon.targets
+++ b/SDKCommon.targets
@@ -1,6 +1,6 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Version>0.9.2</Version>
+    <!--Version>0.9.2</Version-->
     <Authors>Subor</Authors>
     <PackageTags>subor z+ zplus ruyi</PackageTags>
     <Company>Subor Advanced Technology Co., Ltd.</Company>
@@ -9,7 +9,7 @@
     <PackageLicenseUrl>https://github.com/subor/sdk/blob/master/LICENSE.md</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/subor/sdk/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/subor/sdk</RepositoryUrl>
-    <AssemblyVersion>0.9.2.0</AssemblyVersion>
+    <!--AssemblyVersion>0.9.2.0</AssemblyVersion-->
     <PackageOutputPath>$(MSBuildThisFileDirectory)../output</PackageOutputPath>
   </PropertyGroup>
   <ItemGroup>
