Split Thrift into NETFramework and NETCore nupkgs
- Turns out mixing .netstandard and .netframework assemblies is messy.  A project targetting NF 4.6.1 will prefer NF4.5 assembly over NS2.0.  Which is not what we want.

--- a/SDKCommon.targets
+++ b/SDKCommon.targets
@@ -13,6 +13,6 @@
     <PackageOutputPath>$(MSBuildThisFileDirectory)../output</PackageOutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Subor.Thrift" Version="0.11.0" />
+    <PackageReference Include="Subor.Thrift.NETCore" Version="0.11.0.3" />
   </ItemGroup>
 </Project>
