[SDK] RuyiSDKAsync output to same path as old RuyiSDK so archive step doesn't fail

--- a/RuyiSDKAsync/SDK.RuyiSDKAsync.csproj
+++ b/RuyiSDKAsync/SDK.RuyiSDKAsync.csproj
@@ -7,10 +7,12 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netstandard2.0\SDK.RuyiSDKAsync.xml</DocumentationFile>
+    <OutputPath>..\..\output\Debug\RuyiSDK\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\netstandard2.0\SDK.RuyiSDKAsync.xml</DocumentationFile>
+    <OutputPath>..\..\output\Release\RuyiSDK\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
