--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -89,8 +89,10 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\QueryResultMsg.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\RemovePathMsg.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\RequestMsg.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\OverlayManagerExternal\ExternalOverlayManagerService.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\OverlayManagerExternal\NotifyTakeScreenShot.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\Overlay\NotifyTakeScreenShot.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\Overlay\OverlayExternalService.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\Overlay\OverlayState.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\Overlay\VideoCaptureState.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\NetworkConnectionStatus.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\NetworkSettings.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettingNameValue.cs" />
