--- a/SDK.Base.nf2.0/SDK.Base.nf2.0.csproj
+++ b/SDK.Base.nf2.0/SDK.Base.nf2.0.csproj
@@ -78,6 +78,9 @@
     <PackageReference Include="NetMQ">
       <Version>4.0.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>10.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\BuildCommon.targets" />
