--- a/RuyiSDK.nf2.0/RuyiSDK.nf2.0.csproj
+++ b/RuyiSDK.nf2.0/RuyiSDK.nf2.0.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\output\Debug\RuyiSDK.nf2.0\RuyiSDK.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\output\Release\RuyiSDK.nf2.0\RuyiSDK.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
